--- a/calico-enterprise_versioned_docs/version-3.17/visibility/elastic/l7/configure.mdx
+++ b/calico-enterprise_versioned_docs/version-3.17/visibility/elastic/l7/configure.mdx
@@ -36,6 +36,9 @@ L7 logs are visible in the Manager UI, service graph, in the HTTP tab.
 
 ## Before you begin
 
+**Not supported**
+- eBPF dataplane
+
 **Limitations**
 
 - L7 log collection is not supported for host-networked client pods.
