--- a/calico-cloud_versioned_docs/version-3.17/network-policy/recommendations/policy-recommendations.mdx
+++ b/calico-cloud_versioned_docs/version-3.17/network-policy/recommendations/policy-recommendations.mdx
@@ -133,7 +133,7 @@ To reactivate a policy recommendation for a namespace, select the dismissed name
 
 ### Private network recommendations
 
-In the scenario that the recommendation engine generates rules to a 'Private' network, the engine will generate a [GlobalNetworkSet](../../reference/resources/globalnetworkset.mdx) with name 'private-network'. The GlobalNetworkSet should be updated with the private CIDR specific to your network.
+In the scenario that the recommendation engine generates rules to a 'Private' network, the engine will create a rule allowing traffic to RFC 1918 subnets. If a more restrictive approach is desirable, you can create a [GlobalNetworkSet](../../reference/resources/globalnetworkset.mdx) and update it with the desired CIDR blocks. The recommendation engine will identify flows to your private IPs and generate the appropriate NetworkSet Rule allowing traffic to or from those endpoints.
 
 **Notes**:
 Exclude any CIDR ranges used by the cluster for nodes and pods.
