--- a/calico_versioned_docs/version-3.24/getting-started/kubernetes/openshift/requirements.mdx
+++ b/calico_versioned_docs/version-3.24/getting-started/kubernetes/openshift/requirements.mdx
@@ -8,12 +8,6 @@ description: Review the requirements for using OpenShift with Calico.
 
 ## OpenShift requirements
 
-{{prodname}} {{version}} supports:
-
-- OpenShift Container Platform 4.3+
-
-Refer to the OpenShift documentation for additional requirements.
-
-- [OpenShift Container Platform](https://docs.openshift.com/container-platform/4.3/welcome/index.html)
+{{prodname}} supports the [OpenShift Container Platform](https://docs.openshift.com/).
 
 <ReqsKernel />
