--- a/calico/getting-started/kubernetes/managed-public-cloud/eks.mdx
+++ b/calico/getting-started/kubernetes/managed-public-cloud/eks.mdx
@@ -152,6 +152,12 @@ Before you get started, make sure you have downloaded and configured the [necess
     helm install calico projectcalico/tigera-operator --version {{releaseTitle}}
     ```
 
+1. Patch the CNI type with value `Calico`.
+
+    ```batch
+    kubectl patch installation default --type='json' -p='[{"op": "replace", "path": "/spec/cni/type", "value": "Calico"}]'
+    ```
+
 1. Finally, add nodes to the cluster.
 
     ```batch
