--- a/calico-cloud_versioned_docs/version-3.17/operations/disconnect.mdx
+++ b/calico-cloud_versioned_docs/version-3.17/operations/disconnect.mdx
@@ -23,6 +23,15 @@ To remove policies from tiers, you have these options:
 - Manually move policies out of tiers prior to running the script
 - Let the script remove _ALL_ Calico policies by specifying the `--remove-all-calico-policy` flag
 
+:::note
+
+To successfully downgrade to an open-source Calico configuration, policies must allow necessary traffic
+to and from {{prodname}} and open-source Calico namespaces. If you keep policies in the default tier 
+(especially GlobalNetworkPolicies), and you have default deny policies, update or add policies accordingly
+to allow this necessary traffic.
+
+:::
+
 ### Run the migration script
 
 1. Download the script `curl -O {{clouddownloadurl}}/downgrade.sh`.
