--- a/calico-cloud_versioned_docs/version-3.16/threat/suspicious-ips.mdx
+++ b/calico-cloud_versioned_docs/version-3.16/threat/suspicious-ips.mdx
@@ -292,7 +292,7 @@ We will verify the policy from the test workload that we created earlier.
 1. Get a shell in the pod by running the following command:
 
    ```bash
-   kubectl exec -ti tf-ubuntu bash
+   kubectl exec -it tf-ubuntu -- bash
    ```
 
    You should get a prompt inside the pod.
