--- a/calico-enterprise_versioned_docs/version-3.14/threat/suspicious-ips.mdx
+++ b/calico-enterprise_versioned_docs/version-3.14/threat/suspicious-ips.mdx
@@ -242,7 +242,7 @@ In this demo, we will apply the policy only to a test workload (so we do not imp
          url: https://feodotracker.abuse.ch/downloads/ipblocklist.txt
      globalNetworkSet:
        labels:
-         docs.tigera.io/threat/feed: feodo
+         docs.tigera.io/threat-feed: feodo
    ```
 
 4. Reapply the new YAML.
@@ -276,7 +276,7 @@ We will now apply a GlobalNetworkPolicy that blocks the test workload from conne
      egress:
        - action: Deny
          destination:
-           selector: docs.tigera.io/threat/feed == 'feodo'
+           selector: docs.tigera.io/threat-feed == 'feodo'
        - action: Allow
    ```
 
@@ -293,7 +293,7 @@ We will verify the policy from the test workload that we created earlier.
 1. Get a shell in the pod by running the following command:
 
    ```shell
-   kubectl exec -ti tf-ubuntu bash
+   kubectl exec -it tf-ubuntu -- bash
    ```
 
    You should get a prompt inside the pod.
