--- a/calico-enterprise_versioned_docs/version-3.16/getting-started/install-on-clusters/requirements.mdx
+++ b/calico-enterprise_versioned_docs/version-3.16/getting-started/install-on-clusters/requirements.mdx
@@ -8,15 +8,17 @@ description: Review requirements to install Calico Enterprise networking and net
 
 ## CNI plug-in enabled
 
-{{prodname}} is installed as a CNI plugin. The kubelet must be configured
-to use CNI networking by passing the `--network-plugin=cni` argument. (On
-kubeadm, this is the default.)
+{{prodname}} must be installed as a CNI plugin in the container runtime.
+
+This installation must use the Kubernetes default CNI configuration directory (`/etc/cni/net.d`) and binary directory (`/opt/cni/bin`).
 
 ## Other network providers
 
-{{prodname}} must be the only network provider in each cluster. We do
-not currently support migrating a cluster with another network provider to
-use {{prodname}} networking.
+Generally, you can not use {{prodname}} together with another network provider.
+
+Notable exceptions include certain platform-specific CNIs, such as the [AWS VPC CNI](https://github.com/aws/amazon-vpc-cni-k8s/blob/master/README.md) and [Azure VNET CNI](https://github.com/Azure/azure-container-networking/blob/master/docs/cni.md) plugins.
+
+If you're working with a cluster that already uses another CNI, you can not migrate to {{prodname}}.
 
 ## Supported kube-proxy modes
 
