--- a/calico_versioned_docs/version-3.26/operations/ebpf/enabling-ebpf.mdx
+++ b/calico_versioned_docs/version-3.26/operations/ebpf/enabling-ebpf.mdx
@@ -296,7 +296,10 @@ kubectl patch networks.operator.openshift.io cluster --type merge -p '{"spec":{"
 If you cannot disable `kube-proxy` (for example, because it is managed by your Kubernetes distribution), then you _must_ change Felix configuration parameter `BPFKubeProxyIptablesCleanupEnabled` to `false`. This can be done with `kubectl` as follows:
 
 ```
-calicoctl patch felixconfiguration default --patch='{"spec": {"bpfKubeProxyIptablesCleanupEnabled": false}}'
+kubectl patch felixconfiguration default --patch='{"spec": {"bpfKubeProxyIptablesCleanupEnabled": false}}'
+
+
+
 ```
 
 If both `kube-proxy` and `BPFKubeProxyIptablesCleanupEnabled` is enabled then `kube-proxy` will write its iptables rules and Felix will try to clean them up resulting in iptables flapping between the two.
