--- a/calico/operations/upgrading/kubernetes-upgrade.mdx
+++ b/calico/operations/upgrading/kubernetes-upgrade.mdx
@@ -56,7 +56,7 @@ ownership of the helm resources to the new chart location.
 1. Apply the {{version}} CRDs:
 
    ```bash
-   kubectl apply --server-side --force-conflicts -f {{manifestsUrl}}/manifests/operator-crds.yaml
+   kubectl apply --server-side --force-conflicts -f {{manifestsURL}}/manifests/operator-crds.yaml
    ```
 
 1. Install the helm chart in the `tigera-operator` namespace.
@@ -83,7 +83,7 @@ the output and then re-running the command without --dry-run to commit to the ch
 1. Apply the {{version}} CRDs:
 
    ```bash
-   kubectl apply --server-side --force-conflicts -f {{manifestsUrl}}/manifests/operator-crds.yaml
+   kubectl apply --server-side --force-conflicts -f {{manifestsURL}}/manifests/operator-crds.yaml
    ```
 
 1. Run the helm upgrade:
@@ -113,19 +113,19 @@ the output and then re-running the command without --dry-run to commit to the ch
    **{{prodname}} for policy and networking**
 
    ```bash
-   curl {{manifestsUrl}}/manifests/calico.yaml -O
+   curl {{manifestsURL}}/manifests/calico.yaml -o upgrade.yaml
    ```
 
    **{{prodname}} for policy and flannel for networking**
 
    ```bash
-   curl {{manifestsUrl}}/manifests/canal.yaml -O
+   curl {{manifestsURL}}/manifests/canal.yaml -o upgrade.yaml
    ```
 
    **{{prodname}} for policy (advanced)**
 
    ```bash
-   curl {{manifestsUrl}}/manifests/calico-policy-only.yaml -O
+   curl {{manifestsURL}}/manifests/calico-policy-only.yaml -o upgrade.yaml
    ```
 
    :::note
@@ -135,16 +135,15 @@ the output and then re-running the command without --dry-run to commit to the ch
 
    :::
 
-1. Use the following command to initiate a rolling update, after replacing
-   `<manifest-file-name>` with the file name of your {{version}} manifest.
+1. Use the following command to initiate a rolling update.
 
-   ```
-   kubectl replace -f <manifest-file-name>
+   ```bash
+   kubectl apply --server-side --force-conflicts -f upgrade.yaml
    ```
 
 1. Watch the status of the upgrade as follows.
 
-   ```
+   ```bash
    watch kubectl get pods -n kube-system
    ```
 
@@ -182,13 +181,13 @@ the output and then re-running the command without --dry-run to commit to the ch
    **{{prodname}} for policy and networking**
 
    ```bash
-   curl {{manifestsUrl}}/manifests/calico-etcd.yaml -O
+   curl {{manifestsUrl}}/manifests/calico-etcd.yaml -o upgrade.yaml
    ```
 
    **{{prodname}} for policy and flannel for networking**
 
    ```bash
-   curl {{manifestsUrl}}/manifests/canal-etcd.yaml -O
+   curl {{manifestsUrl}}/manifests/canal-etcd.yaml -o upgrade.yaml
    ```
 
    :::note
@@ -199,16 +198,15 @@ the output and then re-running the command without --dry-run to commit to the ch
 
    :::
 
-1. Use the following command to initiate a rolling update, after replacing
-   `<manifest-file-name>` with the file name of your {{version}} manifest.
+1. Use the following command to initiate a rolling update.
 
-   ```
-   kubectl apply -f <manifest-file-name>
+   ```bash
+   kubectl apply --server-side --force-conflicts -f upgrade.yaml
    ```
 
 1. Watch the status of the upgrade as follows.
 
-   ```
+   ```bash
    watch kubectl get pods -n kube-system
    ```
 
