--- a/calico_versioned_docs/version-3.25/operations/upgrading/kubernetes-upgrade.mdx
+++ b/calico_versioned_docs/version-3.25/operations/upgrading/kubernetes-upgrade.mdx
@@ -113,19 +113,19 @@ the output and then re-running the command without --dry-run to commit to the ch
    **{{prodname}} for policy and networking**
 
    ```bash
-   curl {{manifestsUrl}}/manifests/calico.yaml -O
+   curl {{manifestsUrl}}/manifests/calico.yaml -o upgrade.yaml
    ```
 
    **{{prodname}} for policy and flannel for networking**
 
    ```bash
-   curl {{manifestsUrl}}/manifests/canal.yaml -O
+   curl {{manifestsUrl}}/manifests/canal.yaml -o upgrade.yaml
    ```
 
    **{{prodname}} for policy (advanced)**
 
    ```bash
-   curl {{manifestsUrl}}/manifests/calico-policy-only.yaml -O
+   curl {{manifestsUrl}}/manifests/calico-policy-only.yaml -o upgrade.yaml
    ```
 
    :::note
@@ -135,22 +135,21 @@ the output and then re-running the command without --dry-run to commit to the ch
 
    :::
 
-1. Use the following command to initiate a rolling update, after replacing
-   `<manifest-file-name>` with the file name of your {{version}} manifest.
+1. Use the following command to initiate a rolling update.
 
-   ```
-   kubectl replace -f <manifest-file-name>
+   ```bash
+   kubectl apply --server-side --force-conflicts -f upgrade.yaml
    ```
 
 1. Watch the status of the upgrade as follows.
 
-   ```
+   ```bash
    watch kubectl get pods -n kube-system
    ```
 
    Verify that the status of all {{prodname}} pods indicate `Running`.
 
-   ```
+   ```bash
    {{noderunning}}-hvvg8     2/2   Running   0    3m
    {{noderunning}}-vm8kh     2/2   Running   0    3m
    {{noderunning}}-w92wk     2/2   Running   0    3m
@@ -182,13 +181,13 @@ the output and then re-running the command without --dry-run to commit to the ch
    **{{prodname}} for policy and networking**
 
    ```bash
-   curl {{manifestsUrl}}/manifests/calico-etcd.yaml -O
+   curl {{manifestsUrl}}/manifests/calico-etcd.yaml -o upgrade.yaml
    ```
 
    **{{prodname}} for policy and flannel for networking**
 
    ```bash
-   curl {{manifestsUrl}}/manifests/canal-etcd.yaml -O
+   curl {{manifestsUrl}}/manifests/canal-etcd.yaml -o upgrade.yaml
    ```
 
    :::note
@@ -199,15 +198,15 @@ the output and then re-running the command without --dry-run to commit to the ch
 
    :::
 
-1. Use the following command to initiate a rolling update, after replacing
-   `<manifest-file-name>` with the file name of your {{version}} manifest.
+1. Use the following command to initiate a rolling update.
 
-   ```
-   kubectl apply -f <manifest-file-name>
+   ```bash
+   kubectl apply --server-side --force-conflicts -f upgrade.yaml
    ```
 
 1. Watch the status of the upgrade as follows.
 
+   bash
    ```
    watch kubectl get pods -n kube-system
    ```
